Fogbugz 51420 - fixed alignment of social menu

--- a/drupal/profiles/takepart/themes/takepart3/campaigns/intelchange/intelchange.css
+++ b/drupal/profiles/takepart/themes/takepart3/campaigns/intelchange/intelchange.css
@@ -147,6 +147,7 @@
   position: absolute;
   right: 0;
   top: 0;
+  line-height: 0;
 }
 
 .main .addThis>a {
